--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
+  background: linear-gradient(to right, #bd3f32, #cb356b);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form {
+  position: relative;
+  top: 15rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  box-sizing: border-box;
+}
+.button-container button {
+  border: none;
+  background: linear-gradient(to right, #bd3f32, #cb356b);
+}
+.input-container input:hover,
+.input-container input:focus,
+.input-container input:active {
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+@media (min-width: 768px) {
+  .form {
+    width: 50%;
+    padding: 1rem;
+    top: 5rem;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 992px) {
+  .form {
+    width: 25%;
+    padding: 1rem;
   }
 }
